--- a/index.html
+++ b/index.html
@@ -33,6 +33,29 @@
                 </div>
             </div>
         </div>
+        <div class="content">
+            <div class="title">
+                Some random information.
+            </div>
+            <div class="container">
+                <div class="info">
+                    <img src="images/mountain2.jpg" alt="mountain">
+                    <div class="text"> This is some subtext under a image </div>
+                </div>
+                <div class="info">
+                    <img src="images/mountain2.jpg" alt="mountain">
+                    <div class="text"> This is some subtext under a image </div>
+                </div>
+                <div class="info">
+                    <img src="images/mountain2.jpg" alt="mountain">
+                    <div class="text"> This is some subtext under a image </div>
+                </div>
+                <div class="info">
+                    <img src="images/mountain2.jpg" alt="mountain">
+                    <div class="text"> This is some subtext under a image </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
