--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
                 </div>
             </div>
         </div>
+        <div class="quote">
+            <div class="saying">
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+                people will actually read it. Who knows? All i know is that it looks nice.
+            </div>
+            <div class="author">
+                -Thor,God of thunder
+            </div>
+        </div>
+        
     </div>
 </body>
 
