--- a/index.html
+++ b/index.html
@@ -65,7 +65,13 @@
                 -Thor,God of thunder
             </div>
         </div>
-        
+        <div class="action">
+            <div class="left">
+                <h2> Call to action!It's time! </h2>
+                <p> Sign up for our product by clicking that button right over there! </p>
+            </div>
+            <button type="submit"> Sign up</button>
+        </div>
     </div>
 </body>
 
