Done with the HTML part of the project

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
             </div>
             <button type="submit"> Sign up</button>
         </div>
+        <footer>
+            Copyright &copy; The Odin Project 2023
+        </footer>
     </div>
 </body>
 
